force-app/main/default/objects/RIA_Node__c/RIA_Node__c.object-meta.xml
<CustomObject>
    <label>RIA Node</label>
    <pluralLabel>RIA Nodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Node Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>