force-app/main/default/objects/RIA_Node__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <label>Component Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>