force-app/main/default/objects/RIA_Node__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>