force-app/main/default/objects/RIA_Node__c/fields/Metadata_Id__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Id__c</fullName>
    <label>Metadata Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>