force-app/main/default/objects/RIA_Node__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <label>Namespace</label>
    <type>Text</type>
    <length>15</length>
</CustomField>